--- a/src/EntryCard/style/EntryCard.scss
+++ b/src/EntryCard/style/EntryCard.scss
@@ -1,6 +1,67 @@
 @import '../../styles/variable.scss';
 
 .#{$prefix}-entrycard {
-  display: block;
-  color: var(--v-greyscale_3-base);
+  &-chat {
+    background-image: url(../../assets/images/svg/chat.svg);
+  }
+
+  &-stream {
+    background-image: url(../../assets/images/svg/stream.svg);
+  }
+
+  &-left {
+    width: 64px;
+    height: 64px;
+    border-radius: 8px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 24px;
+  }
+
+  &-title {
+      font-weight: 600;
+      font-size: 16px;
+    }
+
+  &-member{
+    &-avatar {
+      background-color: #FFF;
+      position: relative;
+      i {
+        display: inline-block;
+        height: 32px;
+        width: 32px;
+        border-radius: 50%;
+      }
+    }
+
+    &-avatar:nth-of-type(1) {
+      z-index: 3;
+      i {
+        background-color: var(--v-greyscale_4-base);
+      }
+    }
+
+    &-avatar:nth-of-type(2) {
+      z-index: 2;
+      i {
+
+        background-color: var(--v-greyscale_5-base);
+      }
+    }
+
+    &-avatar:nth-of-type(3) {
+      z-index: 1;
+      i {
+
+        background-color: var(--v-greyscale_6-base);
+      }
+    }
+
+    &-total {
+      font-weight: 500;
+      font-size: 14px;
+      color: var(--v-greyscale_3-base);
+    }
+  }
 }
