upd: EntryButton style

--- a/src/EntryButton/style/EntryButton.scss
+++ b/src/EntryButton/style/EntryButton.scss
@@ -1,6 +1,60 @@
 @import '../../styles/variable.scss';
 
 .#{$prefix}-entrybutton {
-  display: block;
-  color: green;
+  width: 160px;
+  border-radius: 100px;
+  cursor: pointer;
+  background-color: #000000;
+  &:hover {
+    background-color: #494949;
+  }
+
+  &-avatar {
+    background-color: #FFFFFF;
+    position: relative;
+    i {
+      display: inline-block;
+      height: 32px;
+      width: 32px;
+      border-radius: 50%;
+    }
+  }
+
+  &-avatar:nth-of-type(1) {
+    z-index: 3;
+    i {
+      background-color: #FFFFFF;
+      background-image: url(../../assets/images/svg/chat.svg);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 16px;
+    }
+  }
+  &-avatar:nth-of-type(1).#{$prefix}-entrybutton-stream {
+    i {
+      background-image: url(../../assets/images/svg/stream.svg);
+    }
+  }
+
+  &-avatar:nth-of-type(2) {
+    z-index: 2;
+    i {
+
+      background-color: var(--v-greyscale_5-base);
+    }
+  }
+
+  &-avatar:nth-of-type(3) {
+    z-index: 1;
+    i {
+
+      background-color: var(--v-greyscale_6-base);
+    }
+  }
+
+  &-total {
+    font-weight: 600;
+    font-size: 16px;
+    color: #FFFFFF;
+  }
 }
