--- a/src/EntryCard/style/EntryCard.scss
+++ b/src/EntryCard/style/EntryCard.scss
@@ -1,11 +1,15 @@
 @import '../../styles/variable.scss';
 
-.#{$prefix}-entrycard {
+.#{$prefix}-entry-card {
   width: 320px;
   border-radius: 8px;
   cursor: pointer;
   &:hover {
     background-color: var(--v-greyscale_5-base);
+  }
+
+  &-wrapper {
+    width: 320px;
   }
 
   &-chat {
