--- a/src/Chat/style/Chat.scss
+++ b/src/Chat/style/Chat.scss
@@ -1,6 +1,23 @@
 @import '../../styles/variable.scss';
 
 .#{$prefix}-chat-item {
+  &-self {
+    justify-content: flex-end;
+  }
+
+  &-self &-avatar-wrapper{
+    display: none;
+  }
+  
+  &-self &-info {
+    text-align: right;
+  }
+
+  &-self &-content {
+    background-color: #FFFFFF;
+    border: 1px solid #EBEBEB;
+  }
+
   &-avatar-wrapper {
     position: relative;
   }
@@ -27,6 +44,12 @@
     display: inline-block;
     background-color: #F5F5F5;
     border-radius: 8px;
+    font-weight: 500;
+    font-size: 14px;
+
+    &-only-mixin {
+      color: #8D8D8D;
+    }
   }
 
   &-name {
@@ -49,5 +72,12 @@
     font-weight: 500;
     font-size: 12px;
     color: #CCCCCC;
+  }
+
+  &-learn-more {
+    color: #8D8D8D !important;
+    text-decoration: underline;
+    font-weight: 500;
+    font-size: 14px;
   }
 }
