--- a/src/ConnectWallet/style/ConnectWallet.scss
+++ b/src/ConnectWallet/style/ConnectWallet.scss
@@ -1,6 +1,37 @@
 @import '../../styles/variable.scss';
 
 .#{$prefix}-connect-wallet {
-  display: block;
-  color: green;
+  height: 324px;
+  position: relative;
+  &-close {
+    position: absolute;
+    cursor: pointer;
+    width: 32px;
+    height: 32px;
+    border-radius: 8px;
+    background-color: #F5F5F5;
+    top: 24px;
+    right: 24px;
+  }
+  .v-dialog {
+    position: relative;
+    padding-bottom: constant(safe-area-inset-bottom);
+    padding-bottom: env(safe-area-inset-bottom);
+  }
+  .v-bottom-sheet.v-dialog {
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+  }
+  .v-card.v-sheet {
+    border-radius: 0;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+  }
+  &-mobile {
+    flex-direction: column;
+    padding: 32px 0;
+    .#{$prefix}-auth-step1-method {
+      margin-bottom: 32px;
+    }
+  }
 }
