--- a/src/Comment/style/Comment.scss
+++ b/src/Comment/style/Comment.scss
@@ -1,18 +1,18 @@
 @import '../../styles/variable.scss';
 
 .#{$prefix}-comment {
-  color: #000000;
+  color: #000;
   &-input {
     .v-input__slot {
       margin: 0;
       padding: 0 16px !important;
-      border-radius: 8px;
       background-color: #F5F5F5 !important;
+      border-radius: 8px;
       input {
         font-weight: 500;
         font-size: 16px;
         &::placeholder {
-          color: #CCCCCC;
+          color: #CCC;
         }
       }
     }
@@ -23,9 +23,9 @@
   &-btn {
     width: 51px !important;
     height: 51px !important;
-    background-color: #000000;
+    color: #FFF;
+    background-color: #000;
     border-radius: 8px;
-    color: #FFFFFF;
     cursor: pointer;
   }
 }
