--- a/src/EntryButton/style/EntryButton.scss
+++ b/src/EntryButton/style/EntryButton.scss
@@ -28,7 +28,7 @@
     z-index: 3;
     i {
       background-color: #FFF;
-      background-image: url(../../assets/images/svg/chat.svg);
+      background-image: url(../../assets/images/svg/chat-black.svg);
       background-repeat: no-repeat;
       background-position: center;
       background-size: 16px;
