--- a/src/EntryCard/style/EntryCard.scss
+++ b/src/EntryCard/style/EntryCard.scss
@@ -13,7 +13,7 @@
   }
 
   &-chat {
-    background-image: url(../../assets/images/svg/chat.svg);
+    background-image: url(../../assets/images/svg/chat-black.svg);
   }
 
   &-stream {
@@ -30,9 +30,9 @@
   }
 
   &-title {
-      font-weight: 600;
-      font-size: 16px;
-    }
+    font-weight: 600;
+    font-size: 16px;
+  }
 
   &-member{
     &-avatar {
