--- a/src/Comment/style/Comment.scss
+++ b/src/Comment/style/Comment.scss
@@ -4,7 +4,7 @@
   position: relative;
   z-index: 2;
   color: #000;
-  background-color: #FFFFFF;
+  background-color: #FFF;
   border-top: 1px solid #F5F5F5;
   &-input {
     .v-input__slot {
@@ -24,6 +24,12 @@
       display: none;
     }
   }
+  &-input.#{$prefix}-comment-input-disabled {
+    .v-input__slot {
+      background-color: #FFF !important;
+      border-color: #EBEBEB !important;
+    }
+  }
   &-btn {
     width: 51px !important;
     height: 51px !important;
@@ -31,5 +37,27 @@
     background-color: #000;
     border-radius: 8px;
     cursor: pointer;
+  }
+
+  &-settings {
+    color: #F44C4C;
+    font-weight: 500;
+    font-size: 14px;
+    background-color: #FFF;
+    cursor: pointer;
+  }
+
+  &-upload {
+    position: relative;
+    &-input {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      font-size: 0;
+      cursor: pointer;
+      opacity: 0;
+    }
   }
 }
