--- a/src/ConnectWallet/style/ConnectWallet.scss
+++ b/src/ConnectWallet/style/ConnectWallet.scss
@@ -1,37 +1,19 @@
 @import '../../styles/variable.scss';
 
 .#{$prefix}-connect-wallet {
-  position: relative;
-  height: 324px;
-  &-close {
-    position: absolute;
-    top: 24px;
-    right: 24px;
-    width: 32px;
-    height: 32px;
-    background-color: #F5F5F5;
-    border-radius: 8px;
-    cursor: pointer;
-  }
-  .v-dialog {
-    position: relative;
-    padding-bottom: constant(safe-area-inset-bottom);
-    padding-bottom: env(safe-area-inset-bottom);
-  }
-  .v-bottom-sheet.v-dialog {
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-  }
-  .v-card.v-sheet {
-    border-radius: 0;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-  }
-  &-mobile {
-    flex-direction: column;
-    padding: 32px 0;
-    .#{$prefix}-auth-step1-method {
-      margin-bottom: 32px;
-    }
+  height: 153px;
+  background-color: #FFF;
+  border-top: 1px solid #F5F5F5;
+  &-btn {
+    padding: 18px 32px 18px 56px !important;
+    color: #FFF !important;
+    font-weight: 600 !important;
+    font-size: 16px !important;
+    letter-spacing: 0;
+    text-transform: capitalize;
+    background-color: #000 !important;
+    background-image: url(../../assets/images/svg/chat-white.svg);
+    background-repeat: no-repeat;
+    background-position: 32px center;
   }
 }
