--- a/src/Wrapper/style/Wrapper.scss
+++ b/src/Wrapper/style/Wrapper.scss
@@ -7,6 +7,7 @@
       position: absolute;
       top: 24px;
       right: 24px;
+      z-index: 10;
       width: 32px;
       height: 32px;
       background-color: #F5F5F5;
@@ -17,6 +18,7 @@
       position: relative;
       padding-bottom: constant(safe-area-inset-bottom);
       padding-bottom: env(safe-area-inset-bottom);
+      overflow: hidden;
     }
     .v-bottom-sheet.v-dialog {
       border-top-left-radius: 8px;
@@ -32,19 +34,19 @@
     position: fixed;
     top: 0;
     right: 0;
+    z-index: 100;
     width: 100vw;
     height: 100vh;
-    z-index: 100;
     &-close {
       position: absolute;
       top: 24px;
       right: 24px;
+      z-index: 10;
       width: 32px;
       height: 32px;
       background-color: #F5F5F5;
       border-radius: 8px;
       cursor: pointer;
-      z-index: 10;
     }
     .v-menu__content {
       right: 32px !important;
