[@FOXONE/PANDO-LOTS-VUE]: 0.0.1-alpha.10

--- a/src/EntryButton/style/EntryButton.scss
+++ b/src/EntryButton/style/EntryButton.scss
@@ -34,7 +34,7 @@
       background-size: 16px;
     }
   }
-  &-avatar:nth-of-type(1).#{$prefix}-entrybutton-stream {
+  &-avatar:nth-of-type(1).#{$prefix}-entry-button-stream {
     i {
       background-image: url(../../assets/images/svg/stream.svg);
     }
