--- a/src/Chat/style/Chat.scss
+++ b/src/Chat/style/Chat.scss
@@ -1,6 +1,13 @@
 @import '../../styles/variable.scss';
 
 .#{$prefix}-chat {
+  .v-menu__content {
+    left: 154px !important;
+    background-color: #FFF;
+    border-radius: 8px !important;
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.06) !important;
+  }
+
   &-header {
     position: relative;
     z-index: 2;
@@ -10,6 +17,8 @@
       color: #000;
       font-weight: bold;
       font-size: 20px;
+      cursor: pointer;
+      user-select: none;
     }
 
     &-total,
@@ -43,12 +52,36 @@
       border-radius: 50%;
     }
     &-txt {
-      cursor: pointer;
-      color: #8D8D8D !important;
-      text-decoration: none;
-      &:hover {
-        text-decoration: underline;
-      }
+      color: #8D8D8D
+      // cursor: pointer;
+      // color: #8D8D8D !important;
+      // text-decoration: none;
+      // &:hover {
+      //   text-decoration: underline;
+      // }
+    }
+  }
+}
+
+.#{$prefix}-chat-menu {
+  width: 198px;
+  background-color: #FFF;
+  border-radius: 8px;
+  &-item {
+    width: 100%;
+    color: #494949;
+    font-weight: 600;
+    font-size: 14px;
+    cursor: pointer;
+    &-active {
+      color: #000;
+    }
+
+    &-icon {
+      display: inline-block;
+      width: 16px;
+      height: 16px;
+      background: url(../../assets/images/svg/checked.svg) no-repeat center;
     }
   }
 }
