--- a/src/Wrapper/style/Wrapper.scss
+++ b/src/Wrapper/style/Wrapper.scss
@@ -19,6 +19,9 @@
       padding-bottom: constant(safe-area-inset-bottom);
       padding-bottom: env(safe-area-inset-bottom);
       overflow: hidden;
+      .v-card__text {
+        padding: 0;
+      }
     }
     .v-bottom-sheet.v-dialog {
       border-top-left-radius: 8px;
