[@FOXONE/PANDO-LOTS-VUE]: 0.0.1-alpha.14

--- a/src/Chat/style/Chat.scss
+++ b/src/Chat/style/Chat.scss
@@ -1,6 +1,7 @@
 @import '../../styles/variable.scss';
 
 .#{$prefix}-chat {
+  background-color: #FFF;
   .v-menu__content {
     left: 154px !important;
     background-color: #FFF;
