--- a/src/Wrapper/style/Wrapper.scss
+++ b/src/Wrapper/style/Wrapper.scss
@@ -10,6 +10,7 @@
       z-index: 10;
       width: 32px;
       height: 32px;
+      color: #000;
       background-color: #F5F5F5;
       border-radius: 8px;
       cursor: pointer;
@@ -47,6 +48,7 @@
       z-index: 10;
       width: 32px;
       height: 32px;
+      color: #000;
       background-color: #F5F5F5;
       border-radius: 8px;
       cursor: pointer;
