[@FOXONE/PANDO-LOTS-VUE]: 0.0.1-alpha.16

--- a/src/Auth/style/Auth.scss
+++ b/src/Auth/style/Auth.scss
@@ -1,6 +1,6 @@
 @import '../../styles/variable.scss';
 
-.#{$prefix}-connect-wallet {
+.#{$prefix}-auth {
   position: relative;
   height: 324px;
   &-close {
