--- a/src/ConnectWallet/style/ConnectWallet.scss
+++ b/src/ConnectWallet/style/ConnectWallet.scss
@@ -1,6 +1,7 @@
 @import '../../styles/variable.scss';
 
 .#{$prefix}-connect-wallet {
+  position: relative;
   height: 143px;
   background-color: #FFF;
   border-top: 1px solid #F5F5F5;
