[@FOXONE/PANDO-LOTS-VUE]: 0.0.1-alpha.17

--- a/src/Chat/style/Chat.scss
+++ b/src/Chat/style/Chat.scss
@@ -138,6 +138,7 @@
 
   &-content {
     display: inline-block;
+    color: #000;
     font-weight: 500;
     font-size: 14px;
     background-color: #F5F5F5;
