[@FOXONE/PANDO-LOTS-VUE]: 0.0.1-alpha.18

--- a/src/Wrapper/style/Wrapper.scss
+++ b/src/Wrapper/style/Wrapper.scss
@@ -25,6 +25,7 @@
       }
     }
     .v-bottom-sheet.v-dialog {
+      max-height: 100%;
       border-top-left-radius: 8px;
       border-top-right-radius: 8px;
     }
