[@FOXONE/PANDO-LOTS-VUE]: 0.0.1-alpha.27

--- a/src/Comment/style/Comment.scss
+++ b/src/Comment/style/Comment.scss
@@ -13,8 +13,10 @@
       background-color: #F5F5F5 !important;
       border-radius: 8px;
       input {
+        color: #000;
         font-weight: 500;
         font-size: 16px;
+        caret-color: #000;
         &::placeholder {
           color: #CCC;
         }
