[@FOXONE/PANDO-LOTS-VUE]: 0.0.1-alpha.28

--- a/src/Comment/style/Comment.scss
+++ b/src/Comment/style/Comment.scss
@@ -22,6 +22,16 @@
         }
       }
     }
+    .v-input__append-inner {
+      .v-input__icon {
+        button {
+          color: #000 !important;
+          svg {
+            color: #000 !important;
+          }
+        }
+      }
+    }
     .v-text-field__details {
       display: none;
     }
