--- a/src/Wrapper/style/Wrapper.scss
+++ b/src/Wrapper/style/Wrapper.scss
@@ -58,7 +58,7 @@
       top: 32px !important;
       right: 32px !important;
       left: auto !important;
-      border-radius: 0;
+      border-radius: 8px !important;
       .v-card__text {
         padding: 0;
       }
