[@FOXONE/PANDO-LOTS-VUE]: 0.0.1-alpha.29

--- a/src/Comment/style/Comment.scss
+++ b/src/Comment/style/Comment.scss
@@ -72,4 +72,11 @@
       opacity: 0;
     }
   }
+
+  &-loading {
+    .v-progress-circular {
+      width: 24px !important;
+      height: 24px !important;
+    }
+  }
 }
