--- a/src/Comment/style/Comment.scss
+++ b/src/Comment/style/Comment.scss
@@ -39,7 +39,8 @@
   &-input.#{$prefix}-comment-input-disabled {
     .v-input__slot {
       background-color: #FFF !important;
-      border-color: #EBEBEB !important;
+      border: 1px solid #EBEBEB;
+      user-select: none;
     }
   }
   &-btn {
@@ -70,6 +71,10 @@
       font-size: 0;
       cursor: pointer;
       opacity: 0;
+    }
+
+    &-disabled &-input {
+      cursor: not-allowed;
     }
   }
 
