--- a/src/EntryButton/style/EntryButton.scss
+++ b/src/EntryButton/style/EntryButton.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variable.scss';
 
 .#{$prefix}-entry-button {
-  width: 160px;
+  display: inline-block;
   background-color: #000;
   border-radius: 100px;
   cursor: pointer;
@@ -9,18 +9,25 @@
     background-color: #494949;
   }
 
-  &-wrapper {
-    width: 160px;
-  }
-
   &-avatar {
     position: relative;
-    background-color: #FFF;
+    background-color: #000;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.12);
     i {
       display: inline-block;
       width: 32px;
       height: 32px;
       border-radius: 50%;
+    }
+
+    .v-image__image {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 32px;
+      height: 32px;
+      border-radius: 50%;
+      transform: translate(-50%, -50%);
     }
   }
 
