--- a/src/EntryCard/style/EntryCard.scss
+++ b/src/EntryCard/style/EntryCard.scss
@@ -12,7 +12,9 @@
     width: 320px;
   }
 
-  &-chat {
+  &-chat,
+  &-mute,
+  &-lecturing {
     background-image: url(../../assets/images/svg/chat-black.svg);
   }
 
@@ -23,6 +25,7 @@
   &-left {
     width: 64px;
     height: 64px;
+    background-color: #F5F5F5;
     background-repeat: no-repeat;
     background-position: center;
     background-size: 24px;
@@ -43,6 +46,16 @@
         width: 32px;
         height: 32px;
         border-radius: 50%;
+      }
+
+      .v-image__image {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 32px;
+        height: 32px;
+        border-radius: 50%;
+        transform: translate(-50%, -50%);
       }
     }
 
