--- a/src/Wrapper/style/Wrapper.scss
+++ b/src/Wrapper/style/Wrapper.scss
@@ -20,6 +20,7 @@
       padding-bottom: constant(safe-area-inset-bottom);
       padding-bottom: env(safe-area-inset-bottom);
       overflow: hidden;
+      background-color: #FFF;
       .v-card__text {
         padding: 0;
       }
@@ -51,7 +52,7 @@
       height: 32px;
       color: #000;
       background-color: #F5F5F5;
-      border-radius: 8px;
+      border-radius: 8px !important;
       cursor: pointer;
     }
     &-menu + .v-menu__content {
