[@FOXONE/PANDO-LOTS-VUE]: 0.0.1-beta.7

--- a/src/Wrapper/style/Wrapper.scss
+++ b/src/Wrapper/style/Wrapper.scss
@@ -34,6 +34,7 @@
       border-radius: 0;
       border-top-left-radius: 8px;
       border-top-right-radius: 8px;
+      box-shadow: none;
     }
   }
   &-pc {
