--- a/src/Stream/style/Stream.scss
+++ b/src/Stream/style/Stream.scss
@@ -1,20 +1,20 @@
 @import '../../styles/variable.scss';
 
 .#{$prefix}-stream {
-  background-color: #2e353f;
-  color: white;
+  position: relative;
   width: 100%;
   height: 100%;
-  position: relative;
-  ::v-deep .player-btn-label {
-    content: " ";
-    height: 30px;
+  color: white;
+  background-color: #2e353f;
+  .player-btn-label {
     width: 30px;
-    background-image: url("../../assets/images/png/hd.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    height: 30px;
     margin: 0 auto;
+    background-image: url("../../assets/images/png/hd.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    content: " ";
     &.r-480p {
       background-image: url("../../assets/images/png/480p.png");
     }
