[@FOXONE/PANDO-LOTS-VUE]: 0.1.2

--- a/src/Comment/style/Comment.scss
+++ b/src/Comment/style/Comment.scss
@@ -6,6 +6,11 @@
   color: #000;
   background-color: #FFF;
   border-top: 1px solid #F5F5F5;
+
+  &-pc {
+    max-width: 400px;
+  }
+
   &-input {
     .v-input__control {
       height: 51px;
