--- a/src/Chat/style/Chat.scss
+++ b/src/Chat/style/Chat.scss
@@ -42,6 +42,20 @@
       }
     }
   }
+
+  &-reconnect {
+    position: relative;
+    z-index: 3;
+    width: 100%;
+    height: 49px;
+    padding-left: 52px;
+    color: #FFF;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 49px;
+    background: url(../../assets/images/svg/warning-white.svg) no-repeat 24px center / 16px;
+    background-color: #F44C4C;
+  }
   
   &-chat-limit {
     border-bottom: 1px solid #EBEBEB;
